# SP_Tracking

./: .gitignore  README.md  pyproject.toml
docs/: moe_online_task_routing_discussion.md  moe_ref_window_online_routing_research.md  pmoe.md  policy_gradient_diagnostics.md  ppo_exploration_survey.md  sapg.md
scripts/: play_tracking_bfm.sh  train_test_policy_gradients.sh  train_tracking_bfm.sh  train_tracking_bfm_multigpu.sh
skills/: output.md
tests/: test_action_safety.py  test_adaptive_snapshot.py  test_checkpoint_utils.py  test_deploy_export.py  test_heft_reward_variants.py  test_heft_teacher_pretrain.py  test_hydra_builders.py  test_large_dataset_motion_scan.py  test_large_dataset_motion_validation.py  test_legacy_reference_views.py  test_motion_command_resample.py  test_motion_group_sampling.py  test_motion_loader_fps.py  test_motion_tracking_robot_cfg.py  test_package_import.py  test_play_cli.py  test_pmoe.py  test_policy_gradient_diagnostics.py  test_reference_cache.py  test_residual_moe.py  test_robot_assets.py  test_runner_checkpoint_export.py  test_runner_curriculum.py  test_runner_nan_diagnostics.py  test_sapg_batch.py  test_sapg_conditioning.py  test_sapg_integration.py  test_sapg_specialized_ppo.py  test_scripts.py  test_semantic_keypoint_xml_alignment.py  test_semantic_keypoints.py  test_sp_mdp_terms.py  test_sp_observation_alignment.py  test_sp_symmetry.py  test_sp_tracking_robot_cfg.py  test_split_lr_checkpoint.py  test_spv1_observations.py  test_spv3_estimator.py  test_spv4_key_bodies.py  test_spv5_reference_encoder.py  (+7 more)
(+138 files in other folders)
