[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "sp-tracking"
version = "0.1.0"
description = "Hydra-configured motion tracking tasks built on mjlab and rsl-rl."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "hydra-core>=1.3.2",
  "mjlab==1.5.0",
  "omegaconf>=2.3.0",
]

[project.scripts]
sp-train = "sp_tracking.scripts.train:main"

[project.entry-points."mjlab.tasks"]
sp_tracking = "sp_tracking.tasks.tracking.registry"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[tool.ruff]
src = ["src"]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011"]
